# putils

./: .gitmodules  ADirectory.hpp  AStar.hpp  AStar.md  AbstractFactory.hpp  AbstractFactory.md  CLI.hpp  CLI.md  CMakeLists.txt  CellularAutomaton.hpp  CellularAutomaton.md  Csv.hpp  Directory.hpp  Directory.md  NamedPipe.hpp  NamedPipe.md  Observable.hpp  Observable.md  OperatorForwarder.hpp  OperatorForwarder.md  OutputPolicies.hpp  Point.hpp  Point.md  Pool.hpp  PooledObject.hpp  Process.hpp  Process.md  QuadTree.hpp  QuadTree.md  RAII.hpp  RAII.md  README.md  Serializable.hpp  Timer.hpp  Timer.md  UnixDirectory.hpp  UnixNamedPipe.hpp  WindowsDirectory.hpp  WndowsNamedPipe.hpp  casts.hpp  (+19 more)
connection/: ATCPConnection.hpp  ATCPConnection.md  ATCPListener.hpp  ATCPListener.md  OpenSSLTCPConnection.hpp  OpenSSLTCPConnection.md  OpenSSLTCPListener.hpp  OpenSSLTCPListener.md  README.md  TCPConnection.hpp  TCPConnection.md  TCPListener.hpp  TCPListener.md  connection.hpp
devices/: Keyboard.md  Mouse.md  README.md
http/: CMakeLists.txt  HttpServer.hpp  Packets.hpp  README.md
http/modules/: LoggerModule.hpp  ProtocolModule.cpp  ProtocolModule.hpp  RoutesModule.cpp  RoutesModule.hpp  SecureConnectionModule.cpp  SecureConnectionModule.hpp
lua/: CMakeLists.txt  README.md  lua.hpp  plua.hpp  sol.hpp
mediator/: BaseModule.cpp  BaseModule.hpp  CMakeLists.txt  DataPacket.hpp  Mediator.cpp  Mediator.hpp  Mediator.md  Module.hpp  Module.md  README.md
meta/: GenLinearHierarchy.hpp  GenLinearHierarchy.md  README.md  apply.hpp  for_each.hpp  has_type.hpp  nameof.hpp  new_from_tuple.hpp  table.hpp  table.md  type.hpp  type.md  type_map.hpp
pluginManager/: CMakeLists.txt  Library.hpp  Library.md  LibraryFactory.hpp  PluginManager.hpp  PluginManager.md  README.md  UnixLibrary.hpp  WindowsLibrary.hpp
pogre/: ActionManager.cpp  ActionManager.hpp  AnimationManager.cpp  AnimationManager.hpp  App.cpp  App.hpp  CEGUIApp.cpp  CEGUIApp.hpp  CEGUIMenu.hpp  CEGUIUtils.hpp  CMakeLists.txt  CameraMan.hpp  CameraManager.hpp  CameraStrategy.hpp  FindSDL2.cmake  FreeFloatingStrategy.hpp  KeyManager.cpp  KeyManager.hpp  MovableText.cpp  MovableText.hpp  OrbitStrategy.hpp  resources.cfg  resources.cfg.bak
pogre/unix/: plugins.cfg  resources.cfg
pogre/win/: plugins.cfg  resources.cfg
pse/: AnimatedSprite.cpp  AnimatedSprite.hpp  CMakeLists.txt  CompositeAnimatedSprite.cpp  CompositeAnimatedSprite.hpp  Engine.cpp  Engine.hpp  Engine.md  Shape.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  ViewItem.cpp  ViewItem.hpp
qt/: loadView.hpp
reflection/: OutputPolicies.hpp  Reflectible.hpp  Reflectible.md  Serializable.hpp  Serializable.md  nameof.hpp
test/: AStar_test.cpp  AbstractFactory_test.cpp  CLI_test.cpp  CellularAutomaton_test.cpp  Csv_test.cpp  Observable_test.cpp  Point_test.cpp  QuadTree_test.cpp  RAII_test.cpp  Timer_test.cpp  casts_test.cpp  chop_test.cpp  concat_test.cpp  connection_test.cpp  erase_test.cpp  json_test.cpp  mediator_test.cpp  read_stream_test.cpp  regex_test.cpp  remove_if_test.cpp  same_sign_test.cpp  sign_test.cpp  to_string_test.cpp
test/meta/: GenLinearHierarchy_test.cpp  for_each_test.cpp  has_type_test.cpp  nameof_test.cpp  new_from_tuple_test.cpp  table_test.cpp  type_test.cpp
test/reflection/: Reflectible_test.cpp  Serializable_test.cpp
